--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
     </style>        
 </head>
 <body>
-    <h1>وارد ربات شوید و دکمه اعتبارسنجی پایین فاکتوری که پرداخت کردید را بزنید</h1>
-  <a class="botlink" href="https://t.me/ExtormSelfBot ">
+    <h1>All rights to this website belong to the null team. To contact support, use the button below on Telegram.</h1>
+  <a class="botlink" href="https://t.me/lastflight">
     <button class="button">
   <div class="outline"></div>
   <div class="state state--default">
