--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 </head>
 <body>
     <h1>All rights to this website belong to the null team. To contact support, use the button below on Telegram.</h1>
-  <a class="botlink" href="https://t.me/lastflight">
+  <a class="botlink" href="https://t.me/mn2pd_bot">
     <button class="button">
   <div class="outline"></div>
   <div class="state state--default">
